setting up git-svn bridge
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_2_14/madman/Rpacks/QDNAseq@90674 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,19 @@
+Changes in version 1.0.4 (2014-05-23)
+-------------------------------------
+
+BUG FIXES
+
+    o getBinAnnotations() fixed after being broken by a change in Bitbucket
+
+Changes in version 1.0.3 (2014-05-23)
+-------------------------------------
+
+IMPROVEMENTS
+
+    o added exportBins() for exporting to a file
+
+    o switch graphics in the vignette to PNG
+
 Changes in version 1.0.2 (2014-05-15)
 -------------------------------------
 
