BACKPORT: Release version QDNAseq was also updated to work with matrixStats (>= 0.51.0) where colMedians() is no longer an S4 method
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_3_3/madman/Rpacks/QDNAseq@122096 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Changes in version 1.8.1 (2016-10-08)
+-------------------------------------
+
+OTHER
+
+    o Package now imports matrixStats::colMedians() as a plain function
+      as it will be in matrixStats (>= 0.51.0).
+
+
 Changes in version 1.8.0 (2016-04-15)
 -------------------------------------
 
